--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1450.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
@@ -18,6 +19,8 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1"
